# evmjit

./: .clang-format  .travis.yml  CMakeLists.txt  Doxyfile  capi.c  circle.yml
cmake/: llvm.cmake
docs/: Doxyfile  annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  evmjit_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  group__evmjit.html  index.html  modules.html  pages.html  structevmjit__bytes__view-members.html  structevmjit__bytes__view.html  structevmjit__hash160-members.html  structevmjit__hash160.html  structevmjit__hash256-members.html  structevmjit__hash256.html  structevmjit__mutable__bytes__view-members.html  structevmjit__mutable__bytes__view.html  structevmjit__result-members.html  structevmjit__result.html  structevmjit__uint256-members.html  structevmjit__uint256.html  todo.html  unionevmjit__variant-members.html  unionevmjit__variant.html
examples/: capi.c
include/: evmjit.h
libevmjit/: CMakeLists.txt  evmjit.cpp
